--- a/PBMC_predictor_LEE_type.ipynb
+++ b/PBMC_predictor_LEE_type.ipynb
@@ -16,7 +16,7 @@
                 "    2. Cell type/state annotation in the tsv/csv format, where a row is the annotation of one cell.\n",
                 "    3. Phenotypic condition annotation in the tsv/csv format, where a row is the annotation of one cell.\n",
                 "\n",
-                "    This tutorial uses the COVID-19 dataset provided in the paper [Jeong Seok Lee, et al, 2020](https://doi.org/10.1126/sciimmunol.abd1554). The data in the H5DF format can be downloaded from [here](https://s3.us-west-2.amazonaws.com/atlas.fredhutch.org/data/hutch/covid19/downloads/lee_2020_processed.HDF5). Users can check the R script prepare_data.R In the Lee_data2 directory for the instructions on preparing the required input files for the Lee's data.\n",
+                "    This tutorial uses the COVID-19 dataset provided in the paper [Jeong Seok Lee, et al, 2020](https://doi.org/10.1126/sciimmunol.abd1554). The data in the H5DF format can be downloaded from [here](https://s3.us-west-2.amazonaws.com/atlas.fredhutch.org/data/hutch/covid19/downloads/lee_2020_processed.HDF5). Users can check the R script prepare_data.R In the [Lee_data2](https://github.com/ZengFLab/scPheno/tree/main/Lee_data2) directory for the instructions on preparing the required input files for the Lee's data.\n",
                 "\n",
                 "- __Model training__: The following command is used to train a scPheno model for the Lee's data. Users can run  `python scPheno.py -h`  for more details on the scPheno parameters.\n"
             ]
@@ -178,7 +178,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "In the default setting, the latent dimension of scPheno is 50. To obtain the 2D visualization of cell embeddings, users should use [UMAP](https://umap-learn.readthedocs.io/en/latest/index.html) on the low-dimension embeddings provided by scPheno. Users can check the R script plot_scp_umap.R in the Lee_data2 directory for the instructions on how to add the 2D positions to the Seurat object for visualization."
+                "In the default setting, the latent dimension of scPheno is 50. To obtain the 2D visualization of cell embeddings, users should use [UMAP](https://umap-learn.readthedocs.io/en/latest/index.html) on the low-dimension embeddings provided by scPheno. Users can check the R script plot_scp_umap.R in the [Lee_data2](https://github.com/ZengFLab/scPheno/tree/main/Lee_data2) directory for the instructions on how to add the 2D positions to the Seurat object for visualization."
             ]
         },
         {
