--- a/thp1.ipynb
+++ b/thp1.ipynb
@@ -119,7 +119,7 @@
    "source": [
     "%%bash\n",
     "\n",
-    "CUDA_VISIBLE_DEVICES=0 python scClassifier5.py --sup-data-file \"/home/zengbio/Project/scPheno_Ex/Thp1/thp1.mtx\" \\\n",
+    "CUDA_VISIBLE_DEVICES=0 python scPheno.py --sup-data-file \"/home/zengbio/Project/scPheno_Ex/Thp1/thp1.mtx\" \\\n",
     "                        --sup-label-file \"/home/zengbio/Project/scPheno_Ex/Thp1/thp1_crispr.txt\" \\\n",
     "                        --sup-condition-file \"/home/zengbio/Project/scPheno_Ex/Thp1/thp1_adt.txt\" \\\n",
     "                        --sup-condition2-file \"/home/zengbio/Project/scPheno_Ex/Thp1/thp1_replicate.txt\" \\\n",
@@ -166,7 +166,7 @@
     "from scipy.special import softmax, log_softmax\n",
     "from collections import Counter\n",
     "\n",
-    "from scClassifier5 import scClassifier5\n",
+    "from scPheno import scPheno\n",
     "from utils.scdata_cached import setup_data_loader, SingleCellCached, transform_label2class, label2class_encoder, transform_class2label\n",
     "\n",
     "import torch\n",
