--- a/ifnb.ipynb
+++ b/ifnb.ipynb
@@ -1,221 +1,20 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 epoch: avg losses 523891.6277 0.0000 elapsed 6.5435 seconds\n",
-      "2 epoch: avg losses 371362.4982 0.0000 elapsed 6.0781 seconds\n",
-      "3 epoch: avg losses 333902.0080 0.0000 elapsed 5.9512 seconds\n",
-      "4 epoch: avg losses 315128.9750 0.0000 elapsed 5.8860 seconds\n",
-      "5 epoch: avg losses 308834.1897 0.0000 elapsed 5.9118 seconds\n",
-      "6 epoch: avg losses 305722.5067 0.0000 elapsed 7.6892 seconds\n",
-      "7 epoch: avg losses 302105.4826 0.0000 elapsed 6.2899 seconds\n",
-      "8 epoch: avg losses 297673.5692 0.0000 elapsed 5.9438 seconds\n",
-      "9 epoch: avg losses 294605.5906 0.0000 elapsed 6.5041 seconds\n",
-      "10 epoch: avg losses 291018.8487 0.0000 elapsed 6.6551 seconds\n",
-      "11 epoch: avg losses 287268.1464 0.0000 elapsed 6.1560 seconds\n",
-      "12 epoch: avg losses 284127.7589 0.0000 elapsed 5.9135 seconds\n",
-      "13 epoch: avg losses 281902.7205 0.0000 elapsed 5.8428 seconds\n",
-      "14 epoch: avg losses 279126.2893 0.0000 elapsed 5.6982 seconds\n",
-      "15 epoch: avg losses 275912.8652 0.0000 elapsed 5.6918 seconds\n",
-      "16 epoch: avg losses 273133.6629 0.0000 elapsed 5.6770 seconds\n",
-      "17 epoch: avg losses 270530.2656 0.0000 elapsed 5.6432 seconds\n",
-      "18 epoch: avg losses 268263.9232 0.0000 elapsed 5.7470 seconds\n",
-      "19 epoch: avg losses 266086.1085 0.0000 elapsed 5.7324 seconds\n",
-      "20 epoch: avg losses 263938.0348 0.0000 elapsed 5.6777 seconds\n",
-      "21 epoch: avg losses 261828.4607 0.0000 elapsed 5.7324 seconds\n",
-      "22 epoch: avg losses 259760.3554 0.0000 elapsed 5.9055 seconds\n",
-      "23 epoch: avg losses 258191.9268 0.0000 elapsed 5.9046 seconds\n",
-      "24 epoch: avg losses 256868.3982 0.0000 elapsed 6.0188 seconds\n",
-      "25 epoch: avg losses 255715.9960 0.0000 elapsed 6.0363 seconds\n",
-      "26 epoch: avg losses 254597.2268 0.0000 elapsed 6.1181 seconds\n",
-      "27 epoch: avg losses 253545.9714 0.0000 elapsed 6.1519 seconds\n",
-      "28 epoch: avg losses 252498.9839 0.0000 elapsed 6.0411 seconds\n",
-      "29 epoch: avg losses 251438.3402 0.0000 elapsed 6.0866 seconds\n",
-      "30 epoch: avg losses 250390.0594 0.0000 elapsed 6.0231 seconds\n",
-      "31 epoch: avg losses 249215.7188 0.0000 elapsed 5.8002 seconds\n",
-      "32 epoch: avg losses 248025.0478 0.0000 elapsed 6.1164 seconds\n",
-      "33 epoch: avg losses 246834.8835 0.0000 elapsed 5.9759 seconds\n",
-      "34 epoch: avg losses 245691.2371 0.0000 elapsed 6.0989 seconds\n",
-      "35 epoch: avg losses 244627.8429 0.0000 elapsed 5.8715 seconds\n",
-      "36 epoch: avg losses 243664.0875 0.0000 elapsed 5.8858 seconds\n",
-      "37 epoch: avg losses 242741.8000 0.0000 elapsed 5.8111 seconds\n",
-      "38 epoch: avg losses 241857.1406 0.0000 elapsed 5.9547 seconds\n",
-      "39 epoch: avg losses 240927.4723 0.0000 elapsed 5.7666 seconds\n",
-      "40 epoch: avg losses 240097.4719 0.0000 elapsed 5.8108 seconds\n",
-      "41 epoch: avg losses 239271.5835 0.0000 elapsed 5.8703 seconds\n",
-      "42 epoch: avg losses 238402.9455 0.0000 elapsed 5.7102 seconds\n",
-      "43 epoch: avg losses 237656.9304 0.0000 elapsed 5.8186 seconds\n",
-      "44 epoch: avg losses 236970.9357 0.0000 elapsed 6.0565 seconds\n",
-      "45 epoch: avg losses 236233.6656 0.0000 elapsed 6.2785 seconds\n",
-      "46 epoch: avg losses 235556.4268 0.0000 elapsed 6.2222 seconds\n",
-      "47 epoch: avg losses 234866.4183 0.0000 elapsed 5.9948 seconds\n",
-      "48 epoch: avg losses 234191.7830 0.0000 elapsed 5.9119 seconds\n",
-      "49 epoch: avg losses 233545.5732 0.0000 elapsed 5.8955 seconds\n",
-      "50 epoch: avg losses 232892.7710 0.0000 elapsed 5.8556 seconds\n",
-      "51 epoch: avg losses 232275.2580 0.0000 elapsed 5.8720 seconds\n",
-      "52 epoch: avg losses 231579.1371 0.0000 elapsed 5.9907 seconds\n",
-      "53 epoch: avg losses 230967.5321 0.0000 elapsed 6.1497 seconds\n",
-      "54 epoch: avg losses 230325.7710 0.0000 elapsed 5.8826 seconds\n",
-      "55 epoch: avg losses 229721.0281 0.0000 elapsed 5.8936 seconds\n",
-      "56 epoch: avg losses 229105.7286 0.0000 elapsed 5.8394 seconds\n",
-      "57 epoch: avg losses 228484.7317 0.0000 elapsed 5.9298 seconds\n",
-      "58 epoch: avg losses 227853.8469 0.0000 elapsed 5.8929 seconds\n",
-      "59 epoch: avg losses 227258.1888 0.0000 elapsed 5.8568 seconds\n",
-      "60 epoch: avg losses 226638.5817 0.0000 elapsed 5.8361 seconds\n",
-      "61 epoch: avg losses 226074.6674 0.0000 elapsed 5.8701 seconds\n",
-      "62 epoch: avg losses 225455.9844 0.0000 elapsed 5.8727 seconds\n",
-      "63 epoch: avg losses 224907.0366 0.0000 elapsed 5.8437 seconds\n",
-      "64 epoch: avg losses 224407.6357 0.0000 elapsed 5.7909 seconds\n",
-      "65 epoch: avg losses 223875.9179 0.0000 elapsed 5.8029 seconds\n",
-      "66 epoch: avg losses 223363.4536 0.0000 elapsed 5.8409 seconds\n",
-      "67 epoch: avg losses 222874.3384 0.0000 elapsed 5.8209 seconds\n",
-      "68 epoch: avg losses 222330.5116 0.0000 elapsed 5.7949 seconds\n",
-      "69 epoch: avg losses 221891.9719 0.0000 elapsed 5.8283 seconds\n",
-      "70 epoch: avg losses 221328.1107 0.0000 elapsed 5.8220 seconds\n",
-      "71 epoch: avg losses 220890.4719 0.0000 elapsed 5.8391 seconds\n",
-      "72 epoch: avg losses 220394.5585 0.0000 elapsed 5.8586 seconds\n",
-      "73 epoch: avg losses 219862.4362 0.0000 elapsed 5.8472 seconds\n",
-      "74 epoch: avg losses 219401.2156 0.0000 elapsed 5.7936 seconds\n",
-      "75 epoch: avg losses 218968.4375 0.0000 elapsed 5.8179 seconds\n",
-      "76 epoch: avg losses 218465.5406 0.0000 elapsed 5.8225 seconds\n",
-      "77 epoch: avg losses 217951.2147 0.0000 elapsed 5.8080 seconds\n",
-      "78 epoch: avg losses 217476.6674 0.0000 elapsed 5.8122 seconds\n",
-      "79 epoch: avg losses 216993.7134 0.0000 elapsed 5.8011 seconds\n",
-      "80 epoch: avg losses 216561.8558 0.0000 elapsed 5.8417 seconds\n",
-      "81 epoch: avg losses 216101.8987 0.0000 elapsed 5.9455 seconds\n",
-      "82 epoch: avg losses 215588.7054 0.0000 elapsed 5.9668 seconds\n",
-      "83 epoch: avg losses 215195.6496 0.0000 elapsed 5.9483 seconds\n",
-      "84 epoch: avg losses 214785.7955 0.0000 elapsed 5.9762 seconds\n",
-      "85 epoch: avg losses 214355.4929 0.0000 elapsed 5.9577 seconds\n",
-      "86 epoch: avg losses 213916.1237 0.0000 elapsed 5.9402 seconds\n",
-      "87 epoch: avg losses 213531.4031 0.0000 elapsed 5.9694 seconds\n",
-      "88 epoch: avg losses 213128.6826 0.0000 elapsed 6.0122 seconds\n",
-      "89 epoch: avg losses 212708.8607 0.0000 elapsed 5.9829 seconds\n",
-      "90 epoch: avg losses 212343.5259 0.0000 elapsed 5.9731 seconds\n",
-      "91 epoch: avg losses 211925.7536 0.0000 elapsed 6.0046 seconds\n",
-      "92 epoch: avg losses 211466.4763 0.0000 elapsed 6.0085 seconds\n",
-      "93 epoch: avg losses 211089.4397 0.0000 elapsed 5.9645 seconds\n",
-      "94 epoch: avg losses 210671.6964 0.0000 elapsed 5.9565 seconds\n",
-      "95 epoch: avg losses 210271.4714 0.0000 elapsed 6.0124 seconds\n",
-      "96 epoch: avg losses 209865.9701 0.0000 elapsed 5.9312 seconds\n",
-      "97 epoch: avg losses 209487.4942 0.0000 elapsed 5.9758 seconds\n",
-      "98 epoch: avg losses 209091.7522 0.0000 elapsed 5.9861 seconds\n",
-      "99 epoch: avg losses 208679.9415 0.0000 elapsed 5.9870 seconds\n",
-      "100 epoch: avg losses 208279.7942 0.0000 elapsed 5.9748 seconds\n",
-      "101 epoch: avg losses 207878.0674 0.0000 elapsed 5.9760 seconds\n",
-      "102 epoch: avg losses 207453.4946 0.0000 elapsed 6.0159 seconds\n",
-      "103 epoch: avg losses 207124.4031 0.0000 elapsed 5.9816 seconds\n",
-      "104 epoch: avg losses 206741.1192 0.0000 elapsed 6.0300 seconds\n",
-      "105 epoch: avg losses 206370.7094 0.0000 elapsed 6.0742 seconds\n",
-      "106 epoch: avg losses 206046.3991 0.0000 elapsed 5.9612 seconds\n",
-      "107 epoch: avg losses 205672.8228 0.0000 elapsed 6.1377 seconds\n",
-      "108 epoch: avg losses 205378.0710 0.0000 elapsed 5.9893 seconds\n",
-      "109 epoch: avg losses 204958.0116 0.0000 elapsed 6.0072 seconds\n",
-      "110 epoch: avg losses 204631.8031 0.0000 elapsed 5.9127 seconds\n",
-      "111 epoch: avg losses 204257.0781 0.0000 elapsed 5.9614 seconds\n",
-      "112 epoch: avg losses 203912.0638 0.0000 elapsed 5.9290 seconds\n",
-      "113 epoch: avg losses 203557.1589 0.0000 elapsed 6.1475 seconds\n",
-      "114 epoch: avg losses 203237.5567 0.0000 elapsed 5.9192 seconds\n",
-      "115 epoch: avg losses 202866.3656 0.0000 elapsed 5.7070 seconds\n",
-      "116 epoch: avg losses 202520.1259 0.0000 elapsed 5.7385 seconds\n",
-      "117 epoch: avg losses 202187.8571 0.0000 elapsed 5.7093 seconds\n",
-      "118 epoch: avg losses 201834.8942 0.0000 elapsed 5.8145 seconds\n",
-      "119 epoch: avg losses 201467.0848 0.0000 elapsed 5.7716 seconds\n",
-      "120 epoch: avg losses 201142.2772 0.0000 elapsed 5.7303 seconds\n",
-      "121 epoch: avg losses 200828.5817 0.0000 elapsed 5.7500 seconds\n",
-      "122 epoch: avg losses 200454.7129 0.0000 elapsed 5.7329 seconds\n",
-      "123 epoch: avg losses 200136.0375 0.0000 elapsed 5.7451 seconds\n",
-      "124 epoch: avg losses 199841.7045 0.0000 elapsed 5.7693 seconds\n",
-      "125 epoch: avg losses 199535.2263 0.0000 elapsed 5.7227 seconds\n",
-      "126 epoch: avg losses 199194.4415 0.0000 elapsed 5.7352 seconds\n",
-      "127 epoch: avg losses 198910.9652 0.0000 elapsed 5.7685 seconds\n",
-      "128 epoch: avg losses 198581.5795 0.0000 elapsed 5.7544 seconds\n",
-      "129 epoch: avg losses 198291.5853 0.0000 elapsed 5.7512 seconds\n",
-      "130 epoch: avg losses 197993.6674 0.0000 elapsed 5.7715 seconds\n",
-      "131 epoch: avg losses 197671.3621 0.0000 elapsed 5.7755 seconds\n",
-      "132 epoch: avg losses 197390.2004 0.0000 elapsed 5.7357 seconds\n",
-      "133 epoch: avg losses 197065.7839 0.0000 elapsed 5.7610 seconds\n",
-      "134 epoch: avg losses 196762.3540 0.0000 elapsed 5.7500 seconds\n",
-      "135 epoch: avg losses 196469.0147 0.0000 elapsed 5.7464 seconds\n",
-      "136 epoch: avg losses 196169.5679 0.0000 elapsed 5.7729 seconds\n",
-      "137 epoch: avg losses 195885.8902 0.0000 elapsed 5.7468 seconds\n",
-      "138 epoch: avg losses 195545.2031 0.0000 elapsed 5.8073 seconds\n",
-      "139 epoch: avg losses 195268.6835 0.0000 elapsed 5.7429 seconds\n",
-      "140 epoch: avg losses 194962.7049 0.0000 elapsed 5.7843 seconds\n",
-      "141 epoch: avg losses 194623.4348 0.0000 elapsed 5.7527 seconds\n",
-      "142 epoch: avg losses 194336.2062 0.0000 elapsed 5.7549 seconds\n",
-      "143 epoch: avg losses 194092.4455 0.0000 elapsed 5.7488 seconds\n",
-      "144 epoch: avg losses 193800.2366 0.0000 elapsed 5.7743 seconds\n",
-      "145 epoch: avg losses 193505.6308 0.0000 elapsed 5.7290 seconds\n",
-      "146 epoch: avg losses 193262.1339 0.0000 elapsed 5.7524 seconds\n",
-      "147 epoch: avg losses 192974.4656 0.0000 elapsed 5.7256 seconds\n",
-      "148 epoch: avg losses 192742.2304 0.0000 elapsed 5.7649 seconds\n",
-      "149 epoch: avg losses 192465.4446 0.0000 elapsed 5.7748 seconds\n",
-      "150 epoch: avg losses 192173.0893 0.0000 elapsed 5.7279 seconds\n",
-      "151 epoch: avg losses 191893.1357 0.0000 elapsed 5.7503 seconds\n",
-      "152 epoch: avg losses 191618.1478 0.0000 elapsed 5.7618 seconds\n",
-      "153 epoch: avg losses 191387.9536 0.0000 elapsed 5.7193 seconds\n",
-      "154 epoch: avg losses 191097.0701 0.0000 elapsed 5.7465 seconds\n",
-      "155 epoch: avg losses 190849.6625 0.0000 elapsed 5.7553 seconds\n",
-      "156 epoch: avg losses 190569.9317 0.0000 elapsed 5.7290 seconds\n",
-      "157 epoch: avg losses 190319.4085 0.0000 elapsed 5.7221 seconds\n",
-      "158 epoch: avg losses 190046.8455 0.0000 elapsed 5.7499 seconds\n",
-      "159 epoch: avg losses 189791.3018 0.0000 elapsed 5.7721 seconds\n",
-      "160 epoch: avg losses 189515.6210 0.0000 elapsed 5.7700 seconds\n",
-      "161 epoch: avg losses 189244.0728 0.0000 elapsed 5.7512 seconds\n",
-      "162 epoch: avg losses 188964.5839 0.0000 elapsed 5.7368 seconds\n",
-      "163 epoch: avg losses 188723.5781 0.0000 elapsed 5.7507 seconds\n",
-      "164 epoch: avg losses 188479.9527 0.0000 elapsed 5.7445 seconds\n",
-      "165 epoch: avg losses 188288.2612 0.0000 elapsed 5.7325 seconds\n",
-      "166 epoch: avg losses 187991.8817 0.0000 elapsed 5.7791 seconds\n",
-      "167 epoch: avg losses 187785.8281 0.0000 elapsed 5.7570 seconds\n",
-      "168 epoch: avg losses 187548.2406 0.0000 elapsed 5.7179 seconds\n",
-      "169 epoch: avg losses 187315.2366 0.0000 elapsed 5.7944 seconds\n",
-      "170 epoch: avg losses 187058.1446 0.0000 elapsed 5.8094 seconds\n",
-      "171 epoch: avg losses 186825.3263 0.0000 elapsed 5.7698 seconds\n",
-      "172 epoch: avg losses 186592.4196 0.0000 elapsed 5.7667 seconds\n",
-      "173 epoch: avg losses 186384.9094 0.0000 elapsed 5.7553 seconds\n",
-      "174 epoch: avg losses 186110.0134 0.0000 elapsed 5.7740 seconds\n",
-      "175 epoch: avg losses 185899.2888 0.0000 elapsed 5.7567 seconds\n",
-      "176 epoch: avg losses 185677.3107 0.0000 elapsed 5.7596 seconds\n",
-      "177 epoch: avg losses 185435.6250 0.0000 elapsed 5.7581 seconds\n",
-      "178 epoch: avg losses 185211.9545 0.0000 elapsed 5.6822 seconds\n",
-      "179 epoch: avg losses 184958.2656 0.0000 elapsed 5.6763 seconds\n",
-      "180 epoch: avg losses 184699.5259 0.0000 elapsed 5.7133 seconds\n",
-      "181 epoch: avg losses 184479.8558 0.0000 elapsed 5.6733 seconds\n",
-      "182 epoch: avg losses 184261.3754 0.0000 elapsed 5.6846 seconds\n",
-      "183 epoch: avg losses 184023.8799 0.0000 elapsed 5.6469 seconds\n",
-      "184 epoch: avg losses 183835.1768 0.0000 elapsed 5.6809 seconds\n",
-      "185 epoch: avg losses 183635.1518 0.0000 elapsed 5.6780 seconds\n",
-      "186 epoch: avg losses 183409.0862 0.0000 elapsed 5.6582 seconds\n",
-      "187 epoch: avg losses 183175.5187 0.0000 elapsed 5.6856 seconds\n",
-      "188 epoch: avg losses 182986.6054 0.0000 elapsed 5.6528 seconds\n",
-      "189 epoch: avg losses 182757.5411 0.0000 elapsed 5.6727 seconds\n",
-      "190 epoch: avg losses 182565.7571 0.0000 elapsed 5.6756 seconds\n",
-      "191 epoch: avg losses 182334.5991 0.0000 elapsed 5.7931 seconds\n",
-      "192 epoch: avg losses 182113.2750 0.0000 elapsed 5.7965 seconds\n",
-      "193 epoch: avg losses 181962.0991 0.0000 elapsed 5.7711 seconds\n",
-      "194 epoch: avg losses 181754.3848 0.0000 elapsed 5.7887 seconds\n",
-      "195 epoch: avg losses 181521.6183 0.0000 elapsed 5.8101 seconds\n",
-      "196 epoch: avg losses 181315.6277 0.0000 elapsed 6.8450 seconds\n",
-      "197 epoch: avg losses 181105.5312 0.0000 elapsed 5.9126 seconds\n",
-      "198 epoch: avg losses 180898.5107 0.0000 elapsed 6.2611 seconds\n",
-      "199 epoch: avg losses 180691.9143 0.0000 elapsed 6.1975 seconds\n",
-      "200 epoch: avg losses 180480.8844 0.0000 elapsed 6.0922 seconds\n",
-      "best validation accuracy 0.0000\n",
-      "F1: 0.0000(macro) 0.0000(weighted) \n",
-      "precision 0.0000 recall 0.0000 \n",
-      "mcc 0.0000\n"
-     ]
-    }
-   ],
+   "source": [
+    "# Prepare data for scPheno\n",
+    "\n",
+    "Currently, scPheno only accept gene expression matrix in csv or txt format. We provide a R example showing the preparation of input files for scPheno. We also provide a R example showing how to add the reconstructed expression to a Seurat object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
